# GPT2-TextClassification

./: .python-version  README.md  pyproject.toml
dataset/: mapping.json
src/: gpt2.py  main.py  utils.py
